--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,3 +6,27 @@
 
 
 @import url('https://fonts.googleapis.com/css2?family=Satoshi:wght@400;500;700&display=swap');
+
+
+/* Hide scrollbar */
+.scrollbar-none::-webkit-scrollbar {
+    display: none;
+  }
+  
+  .scrollbar-none {
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+    scrollbar-width: none; /* Firefox */
+  }
+
+  @keyframes full-spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.custom-spin {
+    animation: full-spin 2s linear infinite;
+}
